--- a/phinx.yml
+++ b/phinx.yml
@@ -16,11 +16,11 @@ environments:
 
     development:
         adapter: mysql
-        host: db
-        name: reporting
+        host: 172.17.0.1
+        name: reporting_app
         user: root
-        pass: 'mustaqim'
-        port: 3306
+        pass: '1234'
+        port: 3636
         charset: utf8
 
     testing:
