Add all guardian feature

--- a/phinx.yml
+++ b/phinx.yml
@@ -17,7 +17,7 @@ environments:
     development:
         adapter: mysql
         host: 172.17.0.1
-        name: test
+        name: reporting
         user: root
         pass: 'nrd113'
         port: 3636
